--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+**config.json
+**generation_config.json
+**pytorch_model.bin
+**special_tokens_map.json
+**tokenizer_config.json
+**tokenizer.json
+**raining_args.bin
